docs: instalacija iz Releases-a, .deb i Windows napomene
Dodata sekcija Instalacija sa oba gotova instalera, popravljena recenica u
Zahtevi/Linux i zapisano zasto Windows build trazi jdk.unsupported i vitice
oko ${env:...}.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>